Change chromosome_number to chromosome, add to CNV PK
