# candig_cnv_service/orm/models.py
@@ -52,4 +52,4 @@ class CNV(Base):
     end_position = Column(Integer)
     copy_number = Column(Float)
     copy_number_ploidy_corrected = Column(Integer)
-    chromosome_number = Column(String(100))
+    chromosome = Column(String(100), primary_key=True)
